--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Map Desafio Ford IEL</string>
     <string name="mapbox_access_token">pk.eyJ1IjoibWljaGFlbHBlc3NvbmkiLCJhIjoiY2wxZ2ZsYmt6MTZpajNxbnNqbXpwMGI0eSJ9.cKQJ-hW1xoBc0S6IsvXInw</string>
+    <string name="options_card_text">O que gostaria de fazer?</string>
+    <string name="show_pins">Visualizar pins</string>
 </resources>
