--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="mapbox_access_token">pk.eyJ1IjoibWljaGFlbHBlc3NvbmkiLCJhIjoiY2wxZ2ZsYmt6MTZpajNxbnNqbXpwMGI0eSJ9.cKQJ-hW1xoBc0S6IsvXInw</string>
     <string name="options_card_text">O que gostaria de fazer?</string>
     <string name="show_pins">Visualizar pins</string>
+    <string name="add_pin_title">Adicionar o pin</string>
 </resources>
