--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="show_pins">Visualizar pins</string>
     <string name="add_pin_title">Adicionar o pin</string>
     <string name="current_location_string">GPS: %s, %s</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
